--- a/src/View/Handle/Handle.scss
+++ b/src/View/Handle/Handle.scss
@@ -13,13 +13,14 @@ $purple: #6200ee;
 
 .y-slider__handle {
   display: flex;
-  position: absolute;
+  position: relative;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   user-select: none;
   .y-slider__point {
     @include ball(12px);
+    position: absolute;
     cursor: pointer;
     &-active {
       box-shadow: 0px 0px 0px 10px transparentize($purple, 0.8);
